rules/dangling-ingress-backend/test/failed_wrong_namespace/input/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ns-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: other-service
            port:
              number: 80
