rules/dangling-ingress-backend/test/failed_wrong_namespace/input/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: other-service
  namespace: other
spec:
  ports:
  - port: 80
